# video-to-article

./: .gitignore  MAC_SETUP.md  README.md  pyproject.toml
docs/: MAC_SETUP.md
src/video_to_article/: __main__.py  cli.py  download_utils.py  generator.py  logging_config.py  pipeline.py  template.html
src/video_to_article/prompt/: make_article.txt  review.txt
